@@ -1,3 +1,10 @@
+2022-11-28  Ulrich Müller  <ulm@gentoo.org>
+
+	* ebuild-mode.el (ebuild-mode-ebuild-cmd-complete): New function,
+	completes multiple ebuild commands. Bug 882053.
+	(ebuild-run-command): Call it.
+	(ebuild-mode-menu): Add ebuild-run-command without argument.
+
 2022-11-19  Ulrich Müller  <ulm@gentoo.org>
 
 	* ebuild-mode.el (ebuild-mode-run-pkgdev)
